src/web/Jordnaer/wwwroot/css/chat.css
.mud-list-item.message-from-self .mud-list-item-text {
    justify-content: end;
    display: flex;
}

.mud-list-item .mud-list-item-text {
    width: 100%;
}

.mud-list-item .mud-typography {
    display: flex;
    align-items: center;
}

.chat-chip {
    white-space: pre-wrap;
    word-wrap: break-word;
    height: 100% !important;
}

.mud-chip-content {
    word-break: break-word;
}

.chat-chip .mud-avatar {
    display: flex;
}

.mud-chip.mud-chip-size-large .mud-avatar {
    margin-left: -16px;
}

.chat-message-window, .chat-selector-window {
    overflow: auto;
    height: 100%;
}

.message-sent-successfully-container {
    display: flex;
    justify-content: end;
    margin-right: 10px;
    margin-top: -20px;
    padding-bottom: 5px;
}

.message-sent-successfully {
    font-size: 14px;
}

.chat-message-list .mud-input-control {
    flex: none; /* or flex: none; depending on what you want */
}

.chat-message-list {
    display: flex;
    flex-direction: column;
    height: 100%;
}

#chat-message-input {
    max-height: 300px;
    padding: 8px;
    font-size: 1.25rem;
}

.mud-icon-button-edge-end {
    margin-right: 0;
    margin-inline-end: 0;
}

.active-chat {
    background-color: var(--mud-palette-action-default-hover);
}

